--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--Draw tree-->
 <h1 style="font-size: 100px">This is a sample website</h1>
 </body>
 </html>
